--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     environment:
       PUID: ${PUID:-1000}
       PGID: ${PGID:-1000}
+      UMASK: ${UMASK:-002}
       TZ: ${TZ:-Europe/London}
       WEBUI_PORT: ${WEBUI_PORT:-8080} # Needs to be set in qBittorrent settings
     volumes:
