--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,11 @@ services:
       PGID: ${PGID:-1000}
       UMASK: ${UMASK:-002}
       TZ: ${TZ:-Europe/London}
-      WEBUI_PORT: ${WEBUI_PORT:-8080} # Needs to be set in qBittorrent settings
     volumes:
       - data:/config
       - ${DOWNLOAD_VOLUME:-/downloads}:${DOWNLOAD_VOLUME:-/downloads} # Needs to be set in qBittorrent settings
     ports:
-      - ${WEBUI_PORT:-8080}:${WEBUI_PORT:-8080}
+      - 8080:8080 # Web UI port
       - ${BITTORRENT_PORT:-58261}:${BITTORRENT_PORT:-58261}     # Needs port forwarding to be setup on the router
       - ${BITTORRENT_PORT:-58261}:${BITTORRENT_PORT:-58261}/udp # Needs port forwarding to be setup on the router
     restart: unless-stopped
