--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,5 +15,5 @@ services:
       UMASK: 002
       TZ: Europe/London
     volumes:
-      - /tank/docker/qbittorrent:/config
+      - /containers/qbittorrent:/config
       - /tank/downloads:/tank/downloads
