--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,7 @@ services:
     image: ghcr.io/hotio/qbittorrent
     container_name: qbittorrent
     restart: unless-stopped
-    ports:
-      - 8080:8080       # Web UI port
-      - 58261:58261     # BitTorrent port. Needs port forwarding to be setup on the router.
-      - 58261:58261/udp # BitTorrent port. Needs port forwarding to be setup on the router.
+    network_mode: host
     environment:
       PUID: 1000
       PGID: 1000
