--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
       UMASK: 002
       TZ: Europe/London
     volumes:
-      - /tank/containers/qbittorrent:/config
-      - /tank/downloads:/tank/downloads
+      - /containers/qbittorrent:/config
+      - /downloads:/downloads
       - /tank/media/movies:/tank/media/movies
       - /tank/media/tv:/tank/media/tv
       - /tank/media/music:/tank/media/music
