Revert "Use host networking so that IPv6 peers are reachable"
This reverts commit 9fdd9e951a80ea3e6fa60d4d1cee6cc59461d277.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,10 @@ services:
     image: ghcr.io/hotio/qbittorrent
     container_name: qbittorrent
     restart: unless-stopped
-    network_mode: host
+    ports:
+      - 8080:8080       # Web UI port
+      - 58261:58261     # BitTorrent port. Needs port forwarding to be setup on the router.
+      - 58261:58261/udp # BitTorrent port. Needs port forwarding to be setup on the router.
     environment:
       PUID: 991
       PGID: 994
