Define container names

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
   qbittorrent:
+    container_name: qbittorrent
     image: ghcr.io/hotio/qbittorrent
     restart: unless-stopped
     ports:
